--- a/one/templates/partials/widgets/tables/_search.html
+++ b/one/templates/partials/widgets/tables/_search.html
@@ -17,7 +17,7 @@
         </svg>
       </span>
     <!--end::Svg Icon-->
-    <input type="text" data-kt-user-table-filter="search"
+    <input type="text" data-kt-table-filter="search"
            class="form-control form-control-solid w-250px ps-14"
            placeholder="{% translate 'Search' %}"/>
   </div>
