--- a/one/templates/defaults/_list.html
+++ b/one/templates/defaults/_list.html
@@ -15,7 +15,7 @@
     <div class="card-toolbar">
       <!--begin::Toolbar-->
       <div class="d-flex justify-content-end"
-           data-kt-user-table-toolbar="base">
+           data-kt-table-toolbar="base">
         {% include 'partials/widgets/tables/_filter.html' %}
         {# {% include 'partials/widgets/tables/_export.html' %}#}
         {% include 'partials/widgets/tables/_new_object.html' %}
@@ -24,13 +24,13 @@
       <!--end::Toolbar-->
       <!--begin::Group actions-->
       <div class="d-flex justify-content-end align-items-center d-none"
-           data-kt-user-table-toolbar="selected">
+           data-kt-table-toolbar="selected">
         <div class="fw-bolder me-5">
             <span class="me-2"
-                  data-kt-user-table-select="selected_count"></span>Selected
+                  data-kt-table-select="selected_count"></span>Selected
         </div>
         <button type="button" class="btn btn-danger"
-                data-kt-user-table-select="delete_selected">Delete Selected
+                data-kt-table-select="delete_selected">Delete Selected
         </button>
       </div>
       <!--end::Group actions-->
@@ -99,7 +99,6 @@
       {
         delete: '{{ ENDPOINT.DELETE }}'
       });
-    console.log('table init----', table)
   })
 </script>
 {% endblock inline_javascript %}
