--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -18,6 +18,7 @@
     <!-- Your stuff: Third-party CSS libraries go here -->
     <!-- This file stores project-specific CSS -->
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
+{#    <link href="{% static 'css/project.min.css' %}" rel="stylesheet">#}
     {% endblock %}
     <!-- Le javascript
     ================================================== -->
@@ -27,8 +28,12 @@
       <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
       <!-- Your stuff: Third-party javascript libraries go here -->
 
+      <!-- Vendor dependencies bundled as one file-->
+{#      <script defer src="{% static 'js/vendors.min.js' %}"></script>#}
+
       <!-- place project specific Javascript in this file -->
       <script defer src="{% static 'js/project.js' %}"></script>
+{#      <script defer src="{% static 'js/project.min.js' %}"></script>#}
 
     {% endblock javascript %}
 
