--- a/one/templates/partials/widgets/forms/two-col-form.html
+++ b/one/templates/partials/widgets/forms/two-col-form.html
@@ -1,4 +1,4 @@
-{% load i18n object_tags %}
+{% load i18n %}
 <!--begin::Form-->
 <form id="kt_account_profile_details_form"
       class="form fv-plugins-bootstrap5 fv-plugins-framework"
