--- a/one/templates/users/user_view.html
+++ b/one/templates/users/user_view.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static object_tags %}
+{% load static %}
 
 {% block title %}User: {{ object.username }}{% endblock %}
 
