--- a/one/templates/defaults/_list.html
+++ b/one/templates/defaults/_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static i18n node_tags %}
+{% load static i18n %}
 
 {% block title %}{% translate 'Settings' %}{% endblock %}
 
