--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -56,7 +56,7 @@
   <div class="page d-flex flex-row flex-column-fluid">
 
     <!--layout-partial:aside/base.html-->
-{#    {% include 'aside/base.html' %}#}
+    {% include 'aside/base.html' %}
 
     <!--begin::Wrapper-->
     <div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper">
