--- a/one/templates/users/user_detail.html
+++ b/one/templates/users/user_detail.html
@@ -41,13 +41,12 @@
                            data-bs-target="#user_profile_add_email_modal">
                           <!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen035.svg-->
                           <span class="svg-icon svg-icon-1 svg-icon-success">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                      <rect opacity="0.3" x="2" y="2" width="20" height="20" rx="5" fill="black"/>
-                      <rect x="10.8891" y="17.8033" width="12" height="2" rx="1" transform="rotate(-90 10.8891 17.8033)"
-                            fill="black"/>
-                      <rect x="6.01041" y="10.9247" width="12" height="2" rx="1" fill="black"/>
-                    </svg>
-                  </span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <rect opacity="0.3" x="2" y="2" width="20" height="20" rx="5" fill="currentColor"/>
+                              <rect x="10.8891" y="17.8033" width="12" height="2" rx="1" transform="rotate(-90 10.8891 17.8033)" fill="currentColor"/>
+                              <rect x="6.01041" y="10.9247" width="12" height="2" rx="1" fill="currentColor"/>
+                            </svg>
+                          </span>
                           <!--end::Svg Icon-->
                           {% translate 'Add new email' %}
                         </a>
@@ -71,17 +70,18 @@
                         <button class="btn btn-icon my-1" type="submit"
                                 name="action_send" data-bs-toggle="tooltip" data-bs-placement="top"
                                 title="{% translate 'Resend verify email' %}">
-                          <!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen016.svg-->
+                          <!--begin::Svg Icon | path: metronic/media/icons/duotune/general/gen016.svg-->
                           <span class="svg-icon svg-icon-1 svg-icon-warning">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                      <path
-                        d="M15.43 8.56949L10.744 15.1395C10.6422 15.282 10.5804 15.4492 10.5651 15.6236C10.5498 15.7981 10.5815 15.9734 10.657 16.1315L13.194 21.4425C13.2737 21.6097 13.3991 21.751 13.5557 21.8499C13.7123 21.9488 13.8938 22.0014 14.079 22.0015H14.117C14.3087 21.9941 14.4941 21.9307 14.6502 21.8191C14.8062 21.7075 14.9261 21.5526 14.995 21.3735L21.933 3.33649C22.0011 3.15918 22.0164 2.96594 21.977 2.78013C21.9376 2.59432 21.8452 2.4239 21.711 2.28949L15.43 8.56949Z"
-                        fill="black"/>
-                      <path opacity="0.3"
-                            d="M20.664 2.06648L2.62602 9.00148C2.44768 9.07085 2.29348 9.19082 2.1824 9.34663C2.07131 9.50244 2.00818 9.68731 2.00074 9.87853C1.99331 10.0697 2.04189 10.259 2.14054 10.4229C2.23919 10.5869 2.38359 10.7185 2.55601 10.8015L7.86601 13.3365C8.02383 13.4126 8.19925 13.4448 8.37382 13.4297C8.54839 13.4145 8.71565 13.3526 8.85801 13.2505L15.43 8.56548L21.711 2.28448C21.5762 2.15096 21.4055 2.05932 21.2198 2.02064C21.034 1.98196 20.8409 1.99788 20.664 2.06648Z"
-                            fill="black"/>
-                    </svg>
-                  </span>
+                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                               xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M15.43 8.56949L10.744 15.1395C10.6422 15.282 10.5804 15.4492 10.5651 15.6236C10.5498 15.7981 10.5815 15.9734 10.657 16.1315L13.194 21.4425C13.2737 21.6097 13.3991 21.751 13.5557 21.8499C13.7123 21.9488 13.8938 22.0014 14.079 22.0015H14.117C14.3087 21.9941 14.4941 21.9307 14.6502 21.8191C14.8062 21.7075 14.9261 21.5526 14.995 21.3735L21.933 3.33649C22.0011 3.15918 22.0164 2.96594 21.977 2.78013C21.9376 2.59432 21.8452 2.4239 21.711 2.28949L15.43 8.56949Z"
+                            fill="currentColor"/>
+                          <path opacity="0.3"
+                                d="M20.664 2.06648L2.62602 9.00148C2.44768 9.07085 2.29348 9.19082 2.1824 9.34663C2.07131 9.50244 2.00818 9.68731 2.00074 9.87853C1.99331 10.0697 2.04189 10.259 2.14054 10.4229C2.23919 10.5869 2.38359 10.7185 2.55601 10.8015L7.86601 13.3365C8.02383 13.4126 8.19925 13.4448 8.37382 13.4297C8.54839 13.4145 8.71565 13.3526 8.85801 13.2505L15.43 8.56548L21.711 2.28448C21.5762 2.15096 21.4055 2.05932 21.2198 2.02064C21.034 1.98196 20.8409 1.99788 20.664 2.06648Z"
+                                fill="currentColor"/>
+                          </svg>
+                          </span>
                           <!--end::Svg Icon-->
                         </button>
                         <button class="btn btn-icon my-1" type="submit"
@@ -89,14 +89,12 @@
                                 title="{% translate 'Delete email' %}">
                           <!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen034.svg-->
                           <span class="svg-icon svg-icon-1 svg-icon-danger">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                      <rect opacity="0.3" x="2" y="2" width="20" height="20" rx="5" fill="black"/>
-                      <rect x="7" y="15.3137" width="12" height="2" rx="1" transform="rotate(-45 7 15.3137)"
-                            fill="black"/>
-                      <rect x="8.41422" y="7" width="12" height="2" rx="1" transform="rotate(45 8.41422 7)"
-                            fill="black"/>
-                    </svg>
-                  </span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <rect opacity="0.3" x="2" y="2" width="20" height="20" rx="5" fill="currentColor"/>
+                              <rect x="7" y="15.3137" width="12" height="2" rx="1" transform="rotate(-45 7 15.3137)" fill="currentColor"/>
+                              <rect x="8.41422" y="7" width="12" height="2" rx="1" transform="rotate(45 8.41422 7)" fill="currentColor"/>
+                            </svg>
+                          </span>
                           <!--end::Svg Icon-->
                         </button>
                       </div>
@@ -208,7 +206,7 @@
                     method="post" enctype="multipart/form-data" action="{% url 'account_change_password' %}">
                 {% csrf_token %}
                 <!--begin::Card body-->
-                <div class="card-body border-top p-9">
+                <div class="card-body">
                   <!--begin::Input group-->
                   <div class="fv-row mb-7">
                     <label class="form-label fw-bolder text-dark fs-6">{% translate "Current Password" %}</label>
