add user default language to db

--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -51,10 +51,6 @@
 <body id="kt_body"
       class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled aside-enabled aside-fixed"
       style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">
-<script>
-  KTApp.setThemeMode("{{ request.user.theme }}", function () {
-  });
-</script>
 <!--begin::Main-->
 <!--begin::Root-->
 <div class="d-flex flex-column flex-root">
@@ -239,9 +235,15 @@
 <script>
   function submitChangeLanguageForm(language) {
     $('#change_language_select_id').val(language).change();
-    $('#change_language_form_id').submit()
+    $.get("{% url 'api:user-set-language' %}?language=" + language);
+    $('#change_language_form_id').submit();
   }
 </script>
+{% if request.user.language != request.LANGUAGE_CODE %}
+  <script>
+    submitChangeLanguageForm("{{ request.user.language }}");
+  </script>
+{% endif %}
 <!--end::Django language-->
 
 <!--begin::Theme mode-->
@@ -249,7 +251,7 @@
   function submitSetThemeMode(theme) {
     KTApp.setThemeMode(theme, function () {
       $.get("{% url 'api:user-set-theme' %}?theme=" + theme, function (data) {
-        if (theme == 'dark'){
+        if (theme == 'dark') {
           $("#theme_mode_light_id").addClass("d-none");
           $("#theme_mode_dark_id").removeClass("d-none");
           $("#theme_mode_light_a_id").removeClass("active");
@@ -263,9 +265,11 @@
       });
     });
   }
+
+  KTApp.setThemeMode("{{ request.user.theme }}", function () {
+  });
 </script>
 <!--end::Theme mode-->
-
 <!--begin::Webpush auto click-->
 <script>
   $(document).ready(function () {
