Fix user profile

--- a/one/templates/users/partials/user_left_aside.html
+++ b/one/templates/users/partials/user_left_aside.html
@@ -31,26 +31,22 @@
       <!--begin::Details toggle-->
       <div class="d-flex flex-stack fs-4 py-3">
         <div class="fw-bolder rotate collapsible" data-bs-toggle="collapse" href="#kt_user_view_details"
-             role="button" aria-expanded="false" aria-controls="kt_user_view_details">Details
+             role="button" aria-expanded="false" aria-controls="kt_user_view_details">{% translate 'Details' %}
           <span class="ms-2 rotate-180">
-                <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
-                <span class="svg-icon svg-icon-3">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                    <path
-                      d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z"
-                      fill="black"/>
-                  </svg>
-                </span>
-            <!--end::Svg Icon-->
-              </span>
-        </div>
-        {% url 'users:update' as user_edit_url %}
-        {% if user_edit_url in request.path %}
-        {% else %}
-            <span data-bs-toggle="tooltip" data-bs-trigger="hover" title="{% translate 'Edit profile details' %}">
-              <a href="{{ user_edit_url }}" class="btn btn-sm btn-light-primary">{% translate 'Edit' %}</a>
+            <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
+            <span class="svg-icon svg-icon-3">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <path
+                  d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z"
+                  fill="black"/>
+              </svg>
             </span>
-        {% endif %}
+            <!--end::Svg Icon-->
+          </span>
+        </div>
+        <span data-bs-toggle="tooltip" data-bs-trigger="hover" title="{% translate 'Edit profile details' %}">
+          <a href="#" class="btn btn-sm btn-light-primary" data-bs-toggle="modal" data-bs-target="#user_profile_update_profile_modal">{% translate 'Edit' %}</a>
+        </span>
       </div>
       <!--end::Details toggle-->
       <div class="separator"></div>
