Add site setting page

--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -118,6 +118,7 @@
       <!--end::Content-->
 
       <!--layout-partial:layout/_footer.html-->
+{#      {% include 'layout/footer.html' %}#}
 
     </div>
     <!--end::Wrapper-->
