update django widget

--- a/one/templates/django/forms/widgets/image.html
+++ b/one/templates/django/forms/widgets/image.html
@@ -3,7 +3,7 @@
 {% if widget.is_initial %}
   <!--begin::Image input-->
   <div class="image-input image-input-outline" data-kt-image-input="true"
-       style="background-image: url({% static 'media/svg/avatars/blank.svg' %})">
+       style="background-image: url({% static 'metronic/media/svg/avatars/blank.svg' %})">
     <!--begin::Image preview wrapper-->
     <div class="image-input-wrapper w-100px h-100px"
          style="background-image: url({{ widget.value.url }})"></div>
@@ -56,7 +56,7 @@
 {% else %}
   <!--begin::Image input-->
   <div class="image-input image-input-empty" data-kt-image-input="true"
-       style="background-image: url({% static 'media/svg/avatars/blank.svg' %})">
+       style="background-image: url({% static 'metronic/media/svg/avatars/blank.svg' %})">
     <!--begin::Image preview wrapper-->
     <div class="image-input-wrapper w-100px h-100px"></div>
     <!--end::Image preview wrapper-->
