--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -137,7 +137,7 @@
 {% include 'drawers/_chat-drawer.html' %}
 
 <!--layout-partial:drawers/_debug-drawer.html-->
-{% include 'drawers/_debug-drawer.html' %}
+{% include 'drawers/debug-drawer.html' %}
 
 <!--end::Drawers-->
 <!--end::Main-->
